Insert network lisk inside navigation; Add separate classes for main menu and social media icons

--- a/index.html
+++ b/index.html
@@ -13,17 +13,18 @@
   <header id="header">
     <h1>Grese Hyseni</h1>
     <nav id="nav">
-      <ul>
+      <ul class="menu">
         <li><a href="">Home</a></li>
         <li><a href="resume/">Resume</a></li>
         <li><a href="portfolio/">Portfolio</a></li>
         <li><a href="contact/">Contact</a></li>
       </ul>
+      <ul class="network">
+        <li class="facebook"><a href="#">Facebook</a></li>
+        <li class="linkedin"><a href="#">Linkedin</a></li>
+      </ul>
     </nav>
-    <ul id="network">
-      <li class="facebook"><a href="#">Facebook</a></li>
-      <li class="linkedin"><a href="#">Linkedin</a></li>
-    </ul>
+
   </header>
   <main id="content">
     <article id="my-story">
