Add .container class to each section or article that is supposed to have the layout on the page

--- a/contact/index.html
+++ b/contact/index.html
@@ -26,7 +26,7 @@
   </header>
   <main id="contact">
     <h2>Get in touch</h2>
-    <section id="contact-info">
+    <section id="contact-info" class="container">
       <h3>
         Contact information
       </h3>
@@ -39,7 +39,7 @@
       <a class="phone" href="tel:+10000000000">(+1)000-000-0000</a>
       <a class="email" href="mailto:ghyseni@hawk.iit.edu">ghyseni@hawk.iit.edu</a>
     </section>
-    <section id="contact-form">
+    <section id="contact-form" class="container">
       <h3> Send me an email</h3>
       <p>
         Best way to contact me is by e-mail. I always check my email and will try to respond If your message is relevant to this website structure, content or work related.
