--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
   <header id="header">
     <h1>Grese Hyseni</h1>
-    <nav id="nav">
+    <nav id="nav" class="opened">
       <ul class="menu">
         <li><a href="">Home</a></li>
         <li><a href="resume/">Resume</a></li>
@@ -27,7 +27,7 @@
 
   </header>
   <main id="content">
-    <article id="my-story">
+    <article id="my-story" class="container">
       <h2>Hi, I'm Gresa - Website and Application Developer</h2>
       <p>
         I've been working with web development for more than two and a half years now.
