--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -26,7 +26,7 @@
     </ul>
   </header>
   <main id="content">
-    <section id="portfolio">
+    <section id="portfolio" class="container">
       <h2>Portfolio</h2>
       <ul>
         <li class="portfolio-entry">
