--- a/resume/index.html
+++ b/resume/index.html
@@ -26,7 +26,7 @@
     </ul>
   </header>
   <main id="content">
-    <article id="resume">
+    <article id="resume" class="container">
       <h2>Resume</h2>
       <section id="skills">
         <h3>Skills</h3>
