Change #content to .content for reuse; .content will be used to set the paddings of the main container or main sections of the page

--- a/contact/index.html
+++ b/contact/index.html
@@ -24,7 +24,7 @@
       <li class="linkedin"><a href="#">Linkedin</a></li>
     </ul>
   </header>
-  <main id="contact">
+  <main id="contact" class="content">
     <h2>Get in touch</h2>
     <section id="contact-info" class="container">
       <h3>
