--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
     </nav>
 
   </header>
-  <main id="content">
-    <article id="my-story" class="container">
+  <main id="about" class="content">
+    <article>
       <h2>Hi, I'm Gresa - Website and Application Developer</h2>
       <p>
         I've been working with web development for more than two and a half years now.
@@ -41,13 +41,14 @@
       <p>
         As for my personality, I am a person who cares about others' opinions and feelings. I also believe that your everyday job should also be a passion of yours - enjoying your work is the only way to excel in what you do.
       </p>
+      <figure>
+        <img src="images/backlit-keyboard.JPG" alt="work" />
+        <figcaption>
+          A picture of my laptop's flat backlit keyboard.
+        </figcaption>
+      </figure>
     </article>
-    <figure>
-      <img src="images/backlit-keyboard.JPG" alt="work" />
-      <figcaption>
-        A picture of my laptop's flat backlit keyboard.
-      </figcaption>
-    </figure>
+
   </main>
   <footer id="footer">
     &copy; 2017 Copyright - Grese Hyseni
