--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -25,84 +25,82 @@
       <li class="linkedin"><a href="#">Linkedin</a></li>
     </ul>
   </header>
-  <main id="content">
-    <section id="portfolio" class="container">
-      <h2>Portfolio</h2>
-      <ul>
-        <li class="portfolio-entry">
-          <article>
-            <a href="#">
-              <h3>Project Online Book</h3>
-            </a>
-            <ul class="category">
-              <li class="category">
-                Design
-              </li>
-              <li>
-                Development
-              </li>
-            </ul>
-            <ul class="team">
-              <li>
-                <a href="#">Name Lastname</a>
-              </li>
-            </ul>
-          </article>
-        </li>
-        <li class="portfolio-entry">
-          <article>
-            <a href="#">
-              <h3>Project Blog</h3>
-            </a>
-            <ul class="categories">
-              <li class="category">
-                Development
-              </li>
-            </ul>
-          </article>
-        </li>
-        <li class="portfolio-entry">
-          <article>
-            <a href="#">
-              <h3>Project E-Commerce</h3>
-            </a>
-            <ul class="categories">
-              <li class="category">
-                Development
-              </li>
-            </ul>
-            <ul class="team">
-              <li>
-                <a href="#">Name Lastname</a>
-              </li>
-            </ul>
-          </article>
-        </li>
-        <li>
-          <article>
-            <a href="#">
-              <h3>Project Online Booking</h3>
-            </a>
-            <ul>
-              <li>
-                Design
-              </li>
-              <li>
-                Development
-              </li>
-            </ul>
-            <ul class="team">
-              <li>
-                <a href="#">Name Lastname</a>
-              </li>
-              <li>
-                <a href="#">Name Lastname</a>
-              </li>
-            </ul>
-          </article>
-        </li>
-      </ul>
-    </section>
+  <main id="portfolio" class="content">
+    <h2>Portfolio</h2>
+    <ul>
+      <li class="portfolio-entry">
+        <article>
+          <a href="#">
+            <h3>Project Online Book</h3>
+          </a>
+          <ul class="category">
+            <li class="category">
+              Design
+            </li>
+            <li>
+              Development
+            </li>
+          </ul>
+          <ul class="team">
+            <li>
+              <a href="#">Name Lastname</a>
+            </li>
+          </ul>
+        </article>
+      </li>
+      <li class="portfolio-entry">
+        <article>
+          <a href="#">
+            <h3>Project Blog</h3>
+          </a>
+          <ul class="categories">
+            <li class="category">
+              Development
+            </li>
+          </ul>
+        </article>
+      </li>
+      <li class="portfolio-entry">
+        <article>
+          <a href="#">
+            <h3>Project E-Commerce</h3>
+          </a>
+          <ul class="categories">
+            <li class="category">
+              Development
+            </li>
+          </ul>
+          <ul class="team">
+            <li>
+              <a href="#">Name Lastname</a>
+            </li>
+          </ul>
+        </article>
+      </li>
+      <li>
+        <article>
+          <a href="#">
+            <h3>Project Online Booking</h3>
+          </a>
+          <ul>
+            <li>
+              Design
+            </li>
+            <li>
+              Development
+            </li>
+          </ul>
+          <ul class="team">
+            <li>
+              <a href="#">Name Lastname</a>
+            </li>
+            <li>
+              <a href="#">Name Lastname</a>
+            </li>
+          </ul>
+        </article>
+      </li>
+    </ul>
   </main>
   <footer id="footer">
     &copy; 2017 Copyright - Grese Hyseni
