--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <body>
   <header id="header">
     <h1>Grese Hyseni</h1>
+    <!-- .opened class will be added to #nav using a jquery funciton, to open the menu after clicking the menu button -->
     <nav id="nav" class="opened">
       <ul class="menu">
         <li><a href="">Home</a></li>
@@ -24,7 +25,10 @@
         <li class="linkedin"><a href="#">Linkedin</a></li>
       </ul>
     </nav>
-
+    <!-- .close class will be added using jquery function to change the shape of the menu icon to X after menu is opened -->
+    <button href="#menu" class="menu-button">
+      <span class="button-line"></span>
+    </button>
   </header>
   <main id="about" class="content">
     <article>
