Style social media icons; Remove text from social media links

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
         <li><a href="contact/">Contact</a></li>
       </ul>
       <ul class="network">
-        <li class="facebook"><a href="#">Facebook</a></li>
-        <li class="linkedin"><a href="#">Linkedin</a></li>
+        <li><a class="facebook" href="#"></a></li>
+        <li><a class="linkedin" href="#"></a></li>
       </ul>
     </nav>
     <!-- .close class will be added using jquery function to change the shape of the menu icon to X after menu is opened -->
