--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
   <header id="header">
-    <h1>Grese Hyseni</h1>
+    <h1><a href="">Grese Hyseni</a></h1>
     <!-- .opened class will be added to #nav using a jquery funciton, to open the menu after clicking the menu button -->
     <nav id="nav" class="opened">
       <ul class="menu">
