Copy paste changes on header to all html files: Social media, Title link

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -11,19 +11,24 @@
 
 <body>
   <header id="header">
-    <h1>Grese Hyseni</h1>
-    <nav id="nav">
-      <ul>
-        <li><a href="../">Home</a></li>
+    <h1><a href="/">Grese Hyseni</a></h1>
+    <!-- .opened class will be added to #nav using a jquery funciton, to open the menu after clicking the menu button -->
+    <nav id="nav" class="opened">
+      <ul class="menu">
+        <li><a href="/">Home</a></li>
         <li><a href="../resume/">Resume</a></li>
         <li><a href="../portfolio/">Portfolio</a></li>
         <li><a href="../contact/">Contact</a></li>
       </ul>
+      <ul class="network">
+        <li><a class="facebook" href="#"></a></li>
+        <li><a class="linkedin" href="#"></a></li>
+      </ul>
     </nav>
-    <ul id="network">
-      <li class="facebook"><a href="#">Facebook</a></li>
-      <li class="linkedin"><a href="#">Linkedin</a></li>
-    </ul>
+    <!-- .close class will be added using jquery function to change the shape of the menu icon to X after menu is opened -->
+    <button href="#menu" class="menu-button">
+      <span class="button-line"></span>
+    </button>
   </header>
   <main id="portfolio" class="content">
     <h2>Portfolio</h2>
