Set .content class to each section instead of the main wrapper, in order to have full size background color for colored sections

--- a/resume/index.html
+++ b/resume/index.html
@@ -30,9 +30,9 @@
       <span class="button-line"></span>
     </button>
   </header>
-  <main id="resume" class="content">
+  <main id="resume">
     <h2>Resume</h2>
-    <section id="skills">
+    <section id="skills" class="content">
       <h3>Skills</h3>
       <ul>
         <li>
@@ -92,7 +92,7 @@
         </li>
       </ul>
     </section>
-    <section id="timeline">
+    <section id="timeline" class="content">
       <h3>Work and Education</h3>
       <ol>
         <li class="timeline-entry">
@@ -158,7 +158,7 @@
         </li>
       </ol>
     </section>
-    <section id="interests">
+    <section id="interests" class="content">
       <h3>Other interests</h3>
       <ul>
         <li>
