Remove .content class

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -30,7 +30,7 @@
       <span class="button-line"></span>
     </button>
   </header>
-  <main id="portfolio" class="content">
+  <main id="portfolio">
     <h2>Portfolio</h2>
     <ul>
       <li class="portfolio-entry">
@@ -82,7 +82,7 @@
           </ul>
         </article>
       </li>
-      <li>
+      <li class="portfolio-entry">
         <article>
           <a href="#">
             <h3>Project Online Booking</h3>
