Change .container to .content; Seems I forgot to change this before

--- a/contact/index.html
+++ b/contact/index.html
@@ -30,9 +30,9 @@
       <span class="button-line"></span>
     </button>
   </header>
-  <main id="contact" class="content">
+  <main id="contact">
     <h2>Get in touch</h2>
-    <section id="contact-info" class="container">
+    <section id="contact-info" class="content">
       <h3>
         Contact information
       </h3>
@@ -45,7 +45,7 @@
       <a class="phone" href="tel:+10000000000">(+1)000-000-0000</a>
       <a class="email" href="mailto:ghyseni@hawk.iit.edu">ghyseni@hawk.iit.edu</a>
     </section>
-    <section id="contact-form" class="container">
+    <section id="contact-form" class="content">
       <h3> Send me an email</h3>
       <p>
         Best way to contact me is by e-mail. I always check my email and will try to respond If your message is relevant to this website structure, content or work related.
