--- a/contact/index.html
+++ b/contact/index.html
@@ -13,7 +13,7 @@
   <header id="header">
     <h1><a href="/">Grese Hyseni</a></h1>
     <!-- .opened class will be added to #nav using a jquery funciton, to open the menu after clicking the menu button -->
-    <nav id="nav" class="opened">
+    <nav id="nav" class="">
       <ul class="menu">
         <li><a href="/">Home</a></li>
         <li><a href="../resume/">Resume</a></li>
@@ -31,7 +31,7 @@
     </button>
   </header>
   <main id="contact">
-    <h2>Get in touch</h2>
+    <h2 id="page-title">Get in touch</h2>
     <section id="contact-info" class="content">
       <h3>
         Contact information
