--- a/404.html
+++ b/404.html
@@ -5,28 +5,31 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1.0,shrink-to-fit=no" />
   <link rel="stylesheet" href="../css/screen.css" />
-  <link rel="stylesheet" href="../css/style.css" />
-  <title>Page not found: Grese Hyseni</title>
+  <title>Page not found</title>
 </head>
 
 <body>
   <header id="header">
-    <h1>Grese Hyseni</h1>
-    <nav id="nav">
-      <ul>
+    <h1><a href="">Grese Hyseni</a></h1>
+    <!-- .opened class will be added to #nav using a jquery funciton, to open the menu after clicking the menu button -->
+    <nav id="nav" class="">
+      <ul class="menu">
         <li><a href="/">Home</a></li>
-        <li><a href="/resume/">Resume</a></li>
-        <li><a href="/portfolio/">Portfolio</a></li>
-        <li><a href="/contact/">Contact</a></li>
+        <li><a href="../resume/">Resume</a></li>
+        <li><a href="../portfolio/">Portfolio</a></li>
+        <li><a href="../contact/">Contact</a></li>
+      </ul>
+      <ul class="network">
+        <li><a class="facebook" href="#"></a></li>
+        <li><a class="linkedin" href="#"></a></li>
       </ul>
     </nav>
-    <a href="#network" class="network-icon network"></a>
-    <ul id="network" >
-      <li class="facebook"><a href="#">Facebook</a></li>
-      <li class="linkedin"><a href="#">Linkedin</a></li>
-    </ul>
+    <!-- .close class will be added using jquery function to change the shape of the menu icon to X after menu is opened -->
+    <button href="#menu" class="menu-button">
+      <span class="button-line"></span>
+    </button>
   </header>
-  <main id="content">
+  <main class="content">
     <h2>Error 404</h2>
     <h3>Page not found!</h3>
     <p>
