Add class .skills-group to list items classifying skills in gropus

--- a/resume/index.html
+++ b/resume/index.html
@@ -34,7 +34,7 @@
     <section id="skills" class="content">
       <h3>Skills</h3>
       <ul>
-        <li>
+        <li class="skills-group">
           <h4>General</h4>
           <ul>
             <li>
@@ -60,7 +60,7 @@
             </li>
           </ul>
         </li>
-        <li>
+        <li class="skills-group">
           <h4> Technical</h4>
           <ul>
             <li>
