Add main page id page-404

--- a/404.html
+++ b/404.html
@@ -29,7 +29,7 @@
       <span class="button-line"></span>
     </button>
   </header>
-  <main class="content">
+  <main id="page-404" class="content">
     <h2>Error 404</h2>
     <h3>Page not found!</h3>
     <p>
