--- a/404.html
+++ b/404.html
@@ -2,10 +2,13 @@
 <html lang="en-US">
 
 <head>
+  <title>Page not found</title>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1.0,shrink-to-fit=no" />
+  <link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet"> 
   <link rel="stylesheet" href="../css/screen.css" />
-  <title>Page not found</title>
+  <!-- <script src="../js/modernizr.js"></script> -->
 </head>
 
 <body>
