Remove empty class atribute from nav

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <header id="header">
     <h1><a href="">Grese Hyseni</a></h1>
     <!-- .opened class will be added to #nav using a jquery funciton, to open the menu after clicking the menu button -->
-    <nav id="nav" class="">
+    <nav id="nav">
       <ul class="menu">
         <li><a href="">Home</a></li>
         <li><a href="resume/">Resume</a></li>
