--- a/404.html
+++ b/404.html
@@ -9,6 +9,7 @@
   <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet" />
   <link rel="stylesheet" href="../css/screen.css" />
   <!-- <script src="../js/modernizr.js"></script> -->
+  <script src="../js/jquery-3.2.1.min.js"></script>
 </head>
 
 <body>
