--- a/resume/index.html
+++ b/resume/index.html
@@ -10,6 +10,7 @@
   <link rel="stylesheet" href="../css/screen.css" />
   <!-- <script src="../js/modernizr.js"></script> -->
   <script src="../js/jquery-3.2.1.min.js"></script>
+  <script src="../js/app.js"></script>
 </head>
 
 <body>
