--- a/resume/index.html
+++ b/resume/index.html
@@ -30,7 +30,7 @@
       </ul>
     </nav>
     <!-- .close class will be added using jquery function to change the shape of the menu icon to X after menu is opened -->
-    <button href="#menu" class="menu-button">
+    <button href="#nav" class="show-nav">
       <span class="button-line"></span>
     </button>
   </header>
