--- a/contact/index.html
+++ b/contact/index.html
@@ -19,7 +19,7 @@
     <!-- .opened class will be added to #nav using a jquery funciton, to open the menu after clicking the menu button -->
     <nav id="nav">
       <ul class="menu">
-        <li><a href="/">Home</a></li>
+        <li><a href="../">Home</a></li>
         <li><a href="../resume/">Resume</a></li>
         <li><a href="../portfolio/">Portfolio</a></li>
         <li><a href="../contact/">Contact</a></li>
