--- a/404.html
+++ b/404.html
@@ -30,7 +30,7 @@
       </ul>
     </nav>
     <!-- .close class will be added using jquery function to change the shape of the menu icon to X after menu is opened -->
-    <button href="#nav" class="show-nav">
+    <button href="#nav" id="show-nav">
       <span class="button-line"></span>
     </button>
   </header>
