--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -15,7 +15,7 @@
 
 <body>
   <header id="header">
-    <h1><a href="/">Grese Hyseni</a></h1>
+    <h1><a href="../">Grese Hyseni</a></h1>
     <!-- .opened class will be added to #nav using a jquery funciton, to open the menu after clicking the menu button -->
     <nav id="nav">
       <ul class="menu">
