--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
   <title>Grese Hyseni: Website and Application Developer</title>
+  <meta name="google-site-verification" content="aJPDX0orPKr0DDkLMhUn3TFglUbm0PvlVs06e7oib1Q" />
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1.0,shrink-to-fit=no" />
   <link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet" />
@@ -11,6 +12,7 @@
   <!-- <script src="js/modernizr.js"></script> -->
   <script src="js/jquery-3.2.1.min.js"></script>
   <script src="js/app.js"></script>
+  
 </head>
 
 <body>
