Change class content to id main in html files

--- a/contact/index.html
+++ b/contact/index.html
@@ -4,7 +4,7 @@
 <head>
   <title>Get in touch: Grese Hyseni</title>
   <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1.0,shrink-to-fit=no" />
+  <meta name="viewport" main="width=device-width,initial-scale=1.0,shrink-to-fit=no" />
   <link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet" />
   <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet" />
   <link rel="stylesheet" href="../css/screen.css" />
@@ -36,7 +36,7 @@
   </header>
   <main id="contact">
     <h2 id="page-title">Get in touch</h2>
-    <section id="contact-info" class="content">
+    <section id="contact-info" class="main">
       <h3>
         Contact information
       </h3>
@@ -49,10 +49,10 @@
       <a class="phone" href="tel:+10000000000">(+1)000-000-0000</a>
       <a class="email" href="mailto:ghyseni@hawk.iit.edu">ghyseni@hawk.iit.edu</a>
     </section>
-    <section id="contact-form" class="content">
+    <section id="contact-form" class="main">
       <h3> Send me an email</h3>
       <p>
-        Best way to contact me is by e-mail. I always check my email and will try to respond If your message is relevant to this website structure, content or work related.
+        Best way to contact me is by e-mail. I always check my email and will try to respond If your message is relevant to this website structure, main or work related.
       </p>
       <form id="form" method="post" action="/">
         <label for="full-name">Full name</label>
