--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <title>Grese Hyseni: Website and Application Developer</title>
   <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1.0,shrink-to-fit=no" />
+  <meta name="viewport" main="width=device-width,initial-scale=1.0,shrink-to-fit=no" />
   <link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet" />
   <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet" />
   <link rel="stylesheet" href="//basehold.it/18" />
@@ -36,7 +36,7 @@
       <span class="button-line"></span>
     </button>
   </header>
-  <main id="about" class="content">
+  <main id="main" class="about">
     <article>
       <h2>Hi, I'm Gresa - Website and Application Developer</h2>
       <p>
