--- a/resume/index.html
+++ b/resume/index.html
@@ -34,7 +34,7 @@
       <span class="button-line"></span>
     </button>
   </header>
-  <main id="resume">
+  <main id="main" class="resume">
     <h2 id="page-title">Resume</h2>
     <section id="skills" class="content">
       <h3>Skills</h3>
