--- a/404.html
+++ b/404.html
@@ -34,7 +34,7 @@
       <span class="button-line"></span>
     </button>
   </header>
-  <main id="page-404" class="content">
+  <main id="page-404" class="main">
     <h2>Error 404</h2>
     <h3>Page not found!</h3>
     <p>
