--- a/contact/index.html
+++ b/contact/index.html
@@ -4,7 +4,7 @@
 <head>
   <title>Get in touch: Grese Hyseni</title>
   <meta charset="utf-8" />
-  <meta name="viewport" main="width=device-width,initial-scale=1.0,shrink-to-fit=no" />
+  <meta name="viewport" content="width=device-width,initial-scale=1.0,shrink-to-fit=no" />
   <link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet" />
   <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet" />
   <link rel="stylesheet" href="../css/screen.css" />
