Add class content to home page #main element

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     </button>
   </header>
   <main id="main" class="about">
-    <article>
+    <article class="content">
       <h2>Hi, I'm Gresa - Website and Application Developer</h2>
       <p>
         I've been working with web development for more than two and a half years now.
