--- a/resume/index.html
+++ b/resume/index.html
@@ -96,7 +96,7 @@
         </li>
       </ul>
     </section>
-    <section id="timeline" class="content">
+    <section class="timeline content">
       <h3>Work and Education</h3>
       <ol>
         <li class="timeline-entry">
