Convert id interests to class interests

--- a/resume/index.html
+++ b/resume/index.html
@@ -162,11 +162,11 @@
         </li>
       </ol>
     </section>
-    <section id="interests" class="content">
+    <section class="interests content">
       <h3>Other interests</h3>
       <ul>
         <li>
-          <h4>Web surfing and browsing</h4>
+          <h4>Web surfing</h4>
           <p>
             I find this as a nice way to of being up to date with what's out there. It also gives me a good view of the web design that are being used, or the programming techniques developers are using and be up to date with the new technologies.
           </p>
