Convert #portfolio to .portfolio in css file

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -34,7 +34,7 @@
       <span class="button-line"></span>
     </button>
   </header>
-  <main id="portfolio">
+  <main id="main" class="portfolio">
     <h2 id="page-title">Portfolio</h2>
     <ul>
       <li class="portfolio-entry">
