Change contact sections ids to classes

--- a/contact/index.html
+++ b/contact/index.html
@@ -34,9 +34,9 @@
       <span class="button-line"></span>
     </button>
   </header>
-  <main id="contact">
+  <main id="main" class="contact">
     <h2 id="page-title">Get in touch</h2>
-    <section id="contact-info" class="main">
+    <section class="contact-info content">
       <h3>
         Contact information
       </h3>
@@ -49,7 +49,7 @@
       <a class="phone" href="tel:+10000000000">(+1)000-000-0000</a>
       <a class="email" href="mailto:ghyseni@hawk.iit.edu">ghyseni@hawk.iit.edu</a>
     </section>
-    <section id="contact-form" class="main">
+    <section class="contact-form content">
       <h3> Send me an email</h3>
       <p>
         Best way to contact me is by e-mail. I always check my email and will try to respond If your message is relevant to this website structure, main or work related.
