Contact code format

--- a/contact/index.html
+++ b/contact/index.html
@@ -42,7 +42,8 @@
         Contact information
       </h3>
       <p>
-        Please feel free to contact me about any web project that you have in mind and you find me suitable to work. Also, I am currenlty available as a freelancer, but I also love working in a workplace that has a good work culture, and it's ambitios in its projects.
+        Please feel free to contact me about any web project that you have in mind and you find me suitable to work. Also, I am currenlty available as a freelancer, but I also love working in a workplace that has a good work culture, and it's ambitios in its
+        projects.
       </p>
       <address class="address">
         1234 Street Name, Chicago, IL, USA
