Remove 'article' tag from portfolio items

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -38,77 +38,69 @@
   <main id="main" class="portfolio">
     <h2 id="page-title">Portfolio</h2>
     <ul>
-      <li class="portfolio-entry">
-        <article>
-          <a href="#">
-            <h3>Project Online Book</h3>
-          </a>
-          <ul class="category">
-            <li class="category">
-              Design
-            </li>
-            <li>
-              Development
-            </li>
-          </ul>
-          <ul class="team">
-            <li>
-              <a href="#">Name Lastname</a>
-            </li>
-          </ul>
-        </article>
+      <li class="portfolio-entry content">
+        <a href="#">
+          <h3>Project Online Book</h3>
+        </a>
+        <ul class="category">
+          <li class="category">
+            Design
+          </li>
+          <li>
+            Development
+          </li>
+        </ul>
+        <ul class="team">
+          <li>
+            <a href="#">Name Lastname</a>
+          </li>
+        </ul>
       </li>
-      <li class="portfolio-entry">
-        <article>
-          <a href="#">
-            <h3>Project Blog</h3>
-          </a>
-          <ul class="categories">
-            <li class="category">
-              Development
-            </li>
-          </ul>
-        </article>
+      <li class="portfolio-entry content">
+        <a href="#">
+          <h3>Project Blog</h3>
+        </a>
+        <ul class="categories">
+          <li class="category">
+            Development
+          </li>
+        </ul>
       </li>
-      <li class="portfolio-entry">
-        <article>
-          <a href="#">
-            <h3>Project E-Commerce</h3>
-          </a>
-          <ul class="categories">
-            <li class="category">
-              Development
-            </li>
-          </ul>
-          <ul class="team">
-            <li>
-              <a href="#">Name Lastname</a>
-            </li>
-          </ul>
-        </article>
+      <li class="portfolio-entry content">
+        <a href="#">
+          <h3>Project E-Commerce</h3>
+        </a>
+        <ul class="categories">
+          <li class="category">
+            Development
+          </li>
+        </ul>
+        <ul class="team">
+          <li>
+            <a href="#">Name Lastname</a>
+          </li>
+        </ul>
       </li>
-      <li class="portfolio-entry">
-        <article>
-          <a href="#">
-            <h3>Project Online Booking</h3>
-          </a>
-          <ul>
-            <li>
-              Design
-            </li>
-            <li>
-              Development
-            </li>
-          </ul>
-          <ul class="team">
-            <li>
-              <a href="#">Name Lastname</a>
-            </li>
-            <li>
-              <a href="#">Name Lastname</a>
-            </li>
-          </ul>
-        </article>
+      <li class="portfolio-entry content">
+        <a href="#">
+          <h3>Project Online Booking</h3>
+        </a>
+        <ul>
+          <li>
+            Design
+          </li>
+          <li>
+            Development
+          </li>
+        </ul>
+        <ul class="team">
+          <li>
+            <a href="#">Name Lastname</a>
+          </li>
+          <li>
+            <a href="#">Name Lastname</a>
+          </li>
+        </ul>
       </li>
     </ul>
   </main>
