--- a/resume/index.html
+++ b/resume/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1.0,shrink-to-fit=no" />
   <link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet" />
   <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet" />
-  <link rel="stylesheet" href="//basehold.it/18" />
+  <!-- <link rel="stylesheet" href="//basehold.it/18" /> -->
   <link rel="stylesheet" href="../css/screen.css" />
   <!-- <script src="../js/modernizr.js"></script> -->
   <script src="../js/jquery-3.2.1.min.js"></script>
