Convert id 'page-title' to class 'page-title'

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -36,7 +36,7 @@
     </button>
   </header>
   <main id="main" class="portfolio">
-    <h2 id="page-title">Portfolio</h2>
+    <h2 class="page-title">Portfolio</h2>
     <ul>
       <li class="portfolio-entry content">
         <a href="#">
