--- a/contact/index.html
+++ b/contact/index.html
@@ -36,7 +36,7 @@
     </button>
   </header>
   <main id="main" class="contact">
-    <h2 id="page-title">Get in touch</h2>
+    <h2 class="page-title">Get in touch</h2>
     <section class="contact-info content">
       <h3>
         Contact information
