--- a/resume/index.html
+++ b/resume/index.html
@@ -36,8 +36,8 @@
     </button>
   </header>
   <main id="main" class="resume">
-    <h2 id="page-title">Resume</h2>
-    <section id="skills" class="content">
+    <h2 class="page-title">Resume</h2>
+    <section class="skills content">
       <h3>Skills</h3>
       <ul>
         <li class="skills-group">
