--- a/contact/index.html
+++ b/contact/index.html
@@ -9,7 +9,7 @@
   <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet" />
   <!-- <link rel="stylesheet" href="//basehold.it/18" /> -->
   <link rel="stylesheet" href="../css/screen.css" />
-  <!-- <script src="../js/modernizr.js"></script> -->
+  <script src="../js/modernizr.js"></script>
   <script src="../js/jquery-3.2.1.min.js"></script>
   <script src="../js/app.js"></script>
 </head>
