Add class 'portfolio-entries' to 'ul' containing portfolio items - for 'ul' spesific styling purposes

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -37,7 +37,7 @@
   </header>
   <main id="main" class="portfolio">
     <h2 class="page-title">Portfolio</h2>
-    <ul>
+    <ul class="portfolio-entries">
       <li class="portfolio-entry content">
         <a href="#">
           <h3>Project Online Book</h3>
