Delete commented content from home page

--- a/index.html
+++ b/index.html
@@ -46,39 +46,17 @@
       <p>
         I've developed quite a broad skill set including: understanding client needs and requirements, team work, time management, project management, technical skills and more.
       </p>
-      <!-- <ul>
-        <li><a href="">Home</a>
-          <ul>
-            <li><a href="">Home</a></li>
-            <li><a href="resume/">Resume</a></li>
-            <li><a href="portfolio/">Portfolio</a></li>
-            <li><a href="contact/">Contact</a></li>
-          </ul>
-        </li>
-        <li><a href="resume/">Resume</a></li>
-        <li><a href="portfolio/">Portfolio</a></li>
-        <li><a href="contact/">Contact</a></li>
-      </ul> -->
       <p>
         Task driven approach is what I've been using so far to meet the requirements and the deadlines with efficiency.
       </p>
-      <!-- <ol>
-        <li><a href="">Home</a></li>
-        <li><a href="resume/">Resume</a></li>
-        <li><a href="portfolio/">Portfolio</a></li>
-        <li><a href="contact/">Contact</a></li>
-      </ol> -->
-      <p>
-        As for my personality, I am a person who cares about others' opinions and feelings. I also believe that your everyday job should also be a passion of yours - enjoying your work is the only way to excel in what you do.
-      </p>
-      <figure>
-        <img src="images/backlit-keyboard.JPG" alt="work" />
-        <figcaption>
-          A picture of my laptop's flat backlit keyboard.
-        </figcaption>
-      </figure>
     </article>
-
+    <figure class="photo">
+      <img src="images/backlit-keyboard.JPG" alt="Photo of laptop keyboard" />
+      <figcaption class="content">
+        A picture of my laptop's flat backlit keyboard.
+      </figcaption>
+    </figure>
+    </article>
   </main>
   <footer id="footer">
     &copy; 2017 Copyright - Grese Hyseni
