--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       </ul>
     </nav>
     <!-- .close class will be added using jquery function to change the shape of the menu icon to X after menu is opened -->
-    <button href="#nav" id="show-nav">
+    <button id="show-nav">
       <span class="button-line"></span>
     </button>
   </header>
@@ -56,7 +56,6 @@
         A picture of my laptop's flat backlit keyboard.
       </figcaption>
     </figure>
-    </article>
   </main>
   <footer id="footer">
     &copy; 2017 Copyright - Grese Hyseni
