Change id 'main' and add class 'content' similar to other html pages in 404 page

--- a/404.html
+++ b/404.html
@@ -30,16 +30,18 @@
       </ul>
     </nav>
     <!-- .close class will be added using jquery function to change the shape of the menu icon to X after menu is opened -->
-    <button href="#nav" id="show-nav">
+    <button id="show-nav">
       <span class="button-line"></span>
     </button>
   </header>
-  <main id="page-404" class="main">
-    <h2>Error 404</h2>
-    <h3>Page not found!</h3>
-    <p>
-      Try and use navigation to find existing pages within this site!
-    </p>
+  <main id="main" class="page-404">
+    <article class="content">
+      <h2>Error 404</h2>
+      <h3>Page not found!</h3>
+      <p>
+        Try and use navigation to find existing pages within this site!
+      </p>
+    </article>
   </main>
   <footer id="footer">
     &copy; 2017 Copyright - Grese Hyseni
