Move figcaption to the bottom of the image in about

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     </article>
     <figure class="photo">
       <img src="images/backlit-keyboard.JPG" alt="Photo of laptop keyboard" />
-      <figcaption class="content">
+      <figcaption>
         A picture of my laptop's flat backlit keyboard.
       </figcaption>
     </figure>
