Use gridbox or flexbox(backup) to make a 50% 50% layout for skills in resume

--- a/resume/index.html
+++ b/resume/index.html
@@ -39,7 +39,7 @@
     <h2 class="page-title">Resume</h2>
     <section class="skills content">
       <h3>Skills</h3>
-      <ul>
+      <ul class="skills-groups">
         <li class="skills-group">
           <h4>General</h4>
           <ul>
