Move scripts from <head> to before </body>

--- a/resume/index.html
+++ b/resume/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en-US">
+<html class="no-js" lang="en-US">
 
 <head>
   <title>Resume: Grese Hyseni</title>
@@ -9,9 +9,6 @@
   <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet" />
   <link rel="stylesheet" href="//basehold.it/18" />
   <link rel="stylesheet" href="../css/screen.css" />
-  <script src="../js/modernizr.js"></script>
-  <script src="../js/jquery-3.2.1.min.js"></script>
-  <script src="../js/app.js"></script>
 </head>
 
 <body>
@@ -202,6 +199,8 @@
   <footer id="footer">
     &copy; 2017 Copyright - Grese Hyseni
   </footer>
+  <script src="../js/jquery-3.2.1.min.js"></script>
+  <script src="../js/app.js"></script>
 </body>
 
 </html>
