--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en-US">
+<html class="no-js" lang="en-US">
 
 <head>
   <title>Grese Hyseni: Website and Application Developer</title>
@@ -10,10 +10,6 @@
   <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet" />
   <link rel="stylesheet" href="//basehold.it/18" />
   <link rel="stylesheet" href="css/screen.css" />
-  <script src="js/modernizr.js"></script>
-  <script src="js/jquery-3.2.1.min.js"></script>
-  <script src="js/app.js"></script>
-
 </head>
 
 <body>
@@ -60,6 +56,8 @@
   <footer id="footer">
     &copy; 2017 Copyright - Grese Hyseni
   </footer>
+  <script src="js/jquery-3.2.1.min.js"></script>
+  <script src="js/app.js"></script>
 </body>
 
 </html>
