Convert keyboard image to bg image

--- a/index.html
+++ b/index.html
@@ -34,8 +34,9 @@
     </button>
   </header>
   <main id="main" class="about">
+
     <article class="content">
-      <h2>Hi, I'm Gresa - Website and Application Developer</h2>
+      <h2> Website and Application Developer</h2>
       <p>
         I've been working with web development for more than two and a half years now.
       </p>
@@ -46,12 +47,16 @@
         Task driven approach is what I've been using so far to meet the requirements and the deadlines with efficiency.
       </p>
     </article>
-    <figure class="photo">
+    <section class='bg-image'>
+
+    </section>
+
+    <!-- <figure class="photo">
       <img src="images/backlit-keyboard.JPG" alt="Photo of laptop keyboard" />
       <figcaption>
         A picture of my laptop's flat backlit keyboard.
       </figcaption>
-    </figure>
+    </figure> -->
   </main>
   <footer id="footer">
     &copy; 2017 Copyright - Grese Hyseni
