Adjust content in resume page - skills section

--- a/resume/index.html
+++ b/resume/index.html
@@ -41,10 +41,10 @@
           <h4>General</h4>
           <ul>
             <li>
-              Professional
+              Professionalism
             </li>
             <li>
-              Committed
+              Committement
             </li>
             <li>
               Attention to details
@@ -56,7 +56,7 @@
               Analytical
             </li>
             <li>
-              Original
+              Communication
             </li>
             <li>
               Managment and leadership
@@ -82,13 +82,25 @@
               Wordpress
             </li>
             <li>
-              Laravel
+              NodeJS
+            </li>
+            <li>
+              MongoDB
+            </li>
+            <li>
+              Mocha/Chai
+            </li>
+            <li>
+              Java SE
             </li>
             <li>
               Android
             </li>
             <li>
               MySQL
+            </li>
+            <li>
+              Laravel
             </li>
           </ul>
         </li>
@@ -188,9 +200,9 @@
           </p>
         </li>
         <li>
-          <h4>Traveling</h4>
+          <h4>Travelling</h4>
           <p>
-            When I say traveling I really mean it: from being in the car/train/plane which gives you time to relax, read or listen to an audio book, or even just daydream a bit - up to going and seeing places you've only heard about or those you had no idea existed.
+            When I say travelling I really mean it: from being in the car/train/plane which gives you time to relax, read or listen to an audio book, or even just daydream a bit - up to going and seeing places you've only heard about or those you had no idea existed.
           </p>
         </li>
       </ul>
