Add skills section in homepage

--- a/index.html
+++ b/index.html
@@ -46,10 +46,38 @@
       <p>
         Task driven approach is what I've been using so far to meet the requirements and the deadlines with efficiency.
       </p>
+      <p>
+        After work, traveling is my passion!
+      </p>
     </article>
-    <section class='bg-image'>
-
+    <section class="skills content">
+      <ul>
+        <li>
+          HTML5
+        </li>
+        <li>
+          CSS3
+        </li>
+        <li>
+          JS/Jquery
+        </li>
+        <li>
+          PHP
+        </li>
+        <li>
+          Wordpress
+        </li>
+        <li>
+          NodeJS
+        </li>
+        <li>
+          Java
+        </li>
+      </ul>
+      <section class='bg-image'>
+      </section>
     </section>
+
 
     <!-- <figure class="photo">
       <img src="images/backlit-keyboard.JPG" alt="Photo of laptop keyboard" />
