Add skills header to home skills section - validator complainder

--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
       </p>
     </article>
     <section class="skills content">
+      <h3>Skills</h3>
       <ul>
         <li>
           HTML5
@@ -74,17 +75,10 @@
           Java
         </li>
       </ul>
-      <section class='bg-image'>
-      </section>
+      <span class='bg-image'>
+      </span>
     </section>
 
-
-    <!-- <figure class="photo">
-      <img src="images/backlit-keyboard.JPG" alt="Photo of laptop keyboard" />
-      <figcaption>
-        A picture of my laptop's flat backlit keyboard.
-      </figcaption>
-    </figure> -->
   </main>
   <footer id="footer">
     &copy; 2017 Copyright - Grese Hyseni
