Add real content to portfolio items (image+text)

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -36,66 +36,62 @@
     <h2 class="page-title">Portfolio</h2>
     <ul class="portfolio-entries">
       <li class="portfolio-entry content">
+        <img src="../images/project1.PNG" alt="Project 1" />
         <a href="#">
-          <h3>Project Online Book</h3>
+          <h3>e-Book</h3>
         </a>
+        <p>
+          Online platform developed on wordpress, to publish a book on sexual education. Tools like: introduction, tips, remember etc. offered.
+        </p>
         <ul class="category">
           <li class="category">
-            Design
-          </li>
-          <li>
-            Development
-          </li>
-        </ul>
-        <ul class="team">
-          <li>
-            <a href="#">Name Lastname</a>
+            Back-end
           </li>
         </ul>
       </li>
       <li class="portfolio-entry content">
+        <img src="../images/project2.PNG" alt="Project 2" />
         <a href="#">
-          <h3>Project Blog</h3>
+          <h3>Coffee site</h3>
         </a>
+        <p>
+          Coffee brand products online presentation. Video, photos, slides and timeline included.
+        </p>
         <ul class="categories">
           <li class="category">
-            Development
+            Back-end
+          </li>
+          <li class="category">
+            Front-end
           </li>
         </ul>
       </li>
       <li class="portfolio-entry content">
+        <img src="../images/project3.PNG" alt="Project 2" />
         <a href="#">
-          <h3>Project E-Commerce</h3>
+          <h3>Interior products</h3>
         </a>
+        <p>
+          Ability to generate spots with zoomed in part of the image to show extra details from the rendered designs. Filter using nested categories.
+        </p>
         <ul class="categories">
           <li class="category">
-            Development
-          </li>
-        </ul>
-        <ul class="team">
-          <li>
-            <a href="#">Name Lastname</a>
+            Back-end
           </li>
         </ul>
       </li>
       <li class="portfolio-entry content">
+        <img src="../images/project4.PNG" alt="Project 2" />
         <a href="#">
-          <h3>Project Online Booking</h3>
+          <h3>Buy, Sell Online </h3>
         </a>
+        <p>
+          Be able to select to search, filter by city to find different properties for buying.
+          Contact directly with the seller. Interactive vector map to select city.
+        </p>
         <ul>
           <li>
-            Design
-          </li>
-          <li>
-            Development
-          </li>
-        </ul>
-        <ul class="team">
-          <li>
-            <a href="#">Name Lastname</a>
-          </li>
-          <li>
-            <a href="#">Name Lastname</a>
+            Front-end
           </li>
         </ul>
       </li>
