Convert to lf endline

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
           Java
         </li>
       </ul>
-      <span class='bg-image'>
+      <span class="bg-image">
       </span>
     </section>
 
