--- a/404.html
+++ b/404.html
@@ -47,6 +47,16 @@
   <footer id="footer">
     &copy; 2017 Copyright - Grese Hyseni
   </footer>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-75992182-2"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-75992182-2');
+</script>
+
 </body>
 
 </html>
