--- a/resume/index.html
+++ b/resume/index.html
@@ -213,6 +213,16 @@
   </footer>
   <script src="../js/jquery-3.2.1.min.js"></script>
   <script src="../js/app.js"></script>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-75992182-2"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-75992182-2');
+</script>
+
 </body>
 
 </html>
