Economico project added to Portfolio

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -95,6 +95,21 @@
           </li>
         </ul>
       </li>
+      <li class="portfolio-entry content">
+        <img src="../images/project5.PNG" alt="Project 2" />
+        <a href="#">
+          <h3>Expense manager </h3>
+        </a>
+        <p>
+          Web application developed in with express.js and bootstrap, that allows user to register daily expenses and get an insight of those ecpenses using filters and charts.Backend testing with mocha.js.
+          Developed in team as part of a shcool project in Web Application Developement in Illinois Institute of Technology.
+        </p>
+        <ul>
+          <li>
+            Front-end
+          </li>
+        </ul>
+      </li>
     </ul>
   </main>
   <footer id="footer">
