Add trouble ticket system to portfolio

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -51,6 +51,21 @@
         </ul>
       </li>
       <li class="portfolio-entry content">
+        <img src="../images/project6.PNG" alt="Project 2" />
+        <a href="#">
+          <h3>Trouble Ticket System </h3>
+        </a>
+        <p>
+          Desktop application developed in Java, with JavaFX for GUI. It's a basic system that allows user (simple or admin) to register and keep history of tickets handling a certain problem
+           and assigned to a certain user, department and category.
+        </p>
+        <ul>
+          <li>
+            Front-end
+          </li>
+        </ul>
+      </li>
+      <li class="portfolio-entry content">
         <img src="../images/project1.PNG" alt="Project 1" />
         <a href="#">
           <h3>e-Book</h3>
